# buzz-waybar

./: Buzz.sample.toml  Cargo.toml
src/: config.rs  fetch.rs  main.rs  return_data.rs
